--- a/client-employee/src/main/resources/bootstrap.yml
+++ b/client-employee/src/main/resources/bootstrap.yml
@@ -3,6 +3,13 @@ server:
 spring:
   application:
     name: client-employee
+  cloud:
+    config:
+      uri: http://localhost:8888/
+      profile: dev
+      discovery:
+        enabled: true
+        service-id: config-server
 eureka:
   instance:
     hostname: client-employee
