--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -1,9 +1,31 @@
 server:
   port: 8001
-spring:
-  application:
-    name: gateway-server
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8000/eureka
+spring:
+  application:
+    name: gateway-server
+  profiles:
+    active: path_route
+---
+spring:
+  profiles: method_route
+  cloud:
+    gateway:
+      routes:
+      - id: method_route
+        uri: http://localhost:9002/get
+        predicates:
+        - Method=GET
+---
+spring:
+  cloud:
+    gateway:
+      routes:
+      - id: path_route
+        uri: http://localhost:9002/get
+        predicates:
+        - Path=/get
+  profiles: path_route
