--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -8,6 +8,8 @@
     <name>gateway-server</name>
     <description>Demo project for Spring Boot</description>
 
+    <packaging>jar</packaging>
+
     <parent>
         <groupId>commom</groupId>
         <artifactId>sudo</artifactId>
@@ -33,6 +35,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
         </dependency>
 
     </dependencies>
