--- a/client_user/src/main/resources/application.yml
+++ b/client_user/src/main/resources/application.yml
@@ -3,9 +3,18 @@ server:
 spring:
   application:
     name: client-user
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/sudo?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    username: root
+    password: password
 eureka:
   client:
     instance:
       hostname: client-user
     service-url:
       defaultZone: http://localhost:8000/eureka
+mybatis:
+  config-location: classpath:mybatis/mybatis-config.xml
+  mapper-locations: classpath:mybatis/mapper/*Mapper.xml
+  type-aliases-package: sudo.client_user.mapper
