--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <lombok.version>1.18.12</lombok.version>
         <druid.version>1.2.1</druid.version>
         <mybatis.version>3.4.6</mybatis.version>
+        <mysql.connection.version>8.0.19</mysql.connection.version>
+        <jdbc.version>2.4.0</jdbc.version>
     </properties>
 
     <dependencyManagement>
@@ -49,12 +51,13 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-jdbc</artifactId>
+                <version>${jdbc.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <scope>runtime</scope>
+                <version>${mysql.connection.version}</version>
             </dependency>
 
             <!-- mybatis -->
