--- a/client_user/pom.xml
+++ b/client_user/pom.xml
@@ -8,6 +8,8 @@
     <name>client_user</name>
     <description>Demo project for Spring Boot</description>
 
+    <packaging>jar</packaging>
+
     <parent>
         <groupId>commom</groupId>
         <artifactId>sudo</artifactId>
