--- a/client_user/src/main/resources/application.yml
+++ b/client_user/src/main/resources/application.yml
@@ -4,10 +4,11 @@ spring:
   application:
     name: client-user
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/sudo?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     username: root
     password: password
+    type: com.alibaba.druid.pool.DruidDataSource
 eureka:
   client:
     instance:
