--- a/client_user/src/main/resources/application.yml
+++ b/client_user/src/main/resources/application.yml
@@ -19,9 +19,7 @@ mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/*Mapper.xml
   type-aliases-package: sudo.client_user.mapper
-
 logging:
-  config: D:/soft/data/DS/sudo/client_user/src/main/resources/config/locbak.xml
+  config: classpath:config/locbak.xml
   level:
     sudo.client_user: trace
-
