--- a/client_user/pom.xml
+++ b/client_user/pom.xml
@@ -132,6 +132,13 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.bitbucket.b_c</groupId>
+            <artifactId>jose4j</artifactId>
+            <version>0.6.5</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -167,9 +174,6 @@
                 <configuration>
                     <!-- 是否覆盖，true表示会替换生成的JAVA文件，false则不覆盖 -->
                     <overwrite>true</overwrite>
-                </configuration>
-                <configuration>
-                    <fork>true</fork>
                 </configuration>
                 <dependencies>
                     <!--mysql驱动包-->
