--- a/client-chat/pom.xml
+++ b/client-chat/pom.xml
@@ -7,12 +7,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>client-chat</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>commom</groupId>
         <artifactId>sudo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath/>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -67,11 +67,9 @@
     </dependencyManagement>
 
     <build>
+        <!-- 打包后的jar名称 -->
+        <finalName>client-server</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
