--- a/client-employee/pom.xml
+++ b/client-employee/pom.xml
@@ -7,12 +7,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>client-employee</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>commom</groupId>
         <artifactId>sudo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath/>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -63,6 +63,8 @@
     </dependencyManagement>
 
     <build>
+        <!-- 打包后的jar名称 -->
+        <finalName>employee-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
