--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -13,8 +13,7 @@
     <parent>
         <groupId>commom</groupId>
         <artifactId>sudo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath/>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -64,6 +63,8 @@
     </dependencyManagement>
 
     <build>
+        <!-- 打包后的jar名称 -->
+        <finalName>gateway-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
