--- a/prometheus/pom.xml
+++ b/prometheus/pom.xml
@@ -7,12 +7,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>prometheus</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>commom</groupId>
         <artifactId>sudo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath/>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -64,6 +64,8 @@
     </dependencyManagement>
 
     <build>
+        <!-- 打包后的jar名称 -->
+        <finalName>prometheus-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
