--- a/sentinel-server/pom.xml
+++ b/sentinel-server/pom.xml
@@ -12,8 +12,7 @@
     <parent>
         <groupId>commom</groupId>
         <artifactId>sudo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath/>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -69,6 +68,8 @@
     </dependencyManagement>
 
     <build>
+        <!-- 打包后的jar名称 -->
+        <finalName>sentinel-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
