--- a/client_user/pom.xml
+++ b/client_user/pom.xml
@@ -131,6 +131,12 @@
             <artifactId>jose4j</artifactId>
             <version>0.6.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
