--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>sudo</groupId>
     <artifactId>gateway-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <name>gateway-server</name>
     <description>Demo project for Spring Boot</description>
 
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>commom</groupId>
         <artifactId>sudo</artifactId>
+        <groupId>commom</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -22,26 +23,28 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
         <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+        <fastjson.version>1.2.47</fastjson.version>
+        <lombok.version>1.18.12</lombok.version>
+        <druid.version>1.2.1</druid.version>
+        <mybatis.version>3.4.6</mybatis.version>
+        <mysql.connection.version>8.0.19</mysql.connection.version>
+        <jdbc.version>2.4.0</jdbc.version>
+        <mybatis.boot.starter.version>2.2.0</mybatis.boot.starter.version>
+        <swagger.version>2.7.0</swagger.version>
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>2.1.2.RELEASE</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
-        </dependency>
-
     </dependencies>
+
 
     <dependencyManagement>
         <dependencies>
