--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -1,54 +1,39 @@
 server:
-  port: 8001
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8000/eureka
+  port: 1010
 spring:
   application:
     name: gateway-server
-  profiles:
-    active: limit_route
----
-spring:
-  profiles: method_route
   cloud:
     gateway:
       routes:
-      - id: method_route
-        uri: http://localhost:9002/get
-        predicates:
-        - Method=GET
----
-spring:
-  cloud:
-    gateway:
-      routes:
-      - id: path_route
-        uri: http://localhost:9002/get
-        predicates:
-        - Path=/get
-  profiles: path_route
-
----
-spring:
-  cloud:
-    gateway:
-      routes:
-      - id: limit_route
-        uri: http://localhost:9002/get
-        predicates:
-        - Path=/get
-        filters:
-          - name: RequestRateLimiter
-            args:
-              key-resolver: '#{@hostAddrKeyResolver}'
-              redis-rate-limiter.replenishRate: 1
-              redis-rate-limiter.burstCapacity: 1
-  profiles: path_route
-
-  # redis-cli.exe -h 127.0.0.1 -p 6379  启动redis  本地cmd
-  redis:
-    host: localhost
-    database: 0
-    port: 6379
+        # 路由id可以随便定义
+        - id: gateway-rout
+          # 代理服务地址端口
+          # uri: http://localhost:9004  #指定ip地址进行路由
+          uri: lb://client-user  # 指定动态路由的配置
+          # 断言 可以配置映射路径
+          predicates:
+            - Path=/user/**
+          filters: #局部过滤器
+            # 表示过滤一个路径  2 表示过滤两个路径:  过滤路径就是把断言里面的一个/user
+            # 去掉然后进行访问
+            - StripPrefix=1
+            # - PrefixPath=/user  #添加访问路径的前缀
+            # 自定义过滤器
+            - MyParam=port
+      default-filters:  #全局默认过滤器  添加下面的响应头名字与值
+        - AddResponseHeader=X-Response-Default-Foo, Default-Bar
+      globalcors:  # 跨域请求设置
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "*" #允许所有的访问可以跨域请求
+            # allowedOrigins:
+            #  - "http://www.baidu.com"  # 允许某个网址进行跨域请求
+            allowedMethods:
+              - GET
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8001/eureka
+  instance:
+    prefer-ip-address: true
